--- a/data/projects.json
+++ b/data/projects.json
@@ -4,126 +4,129 @@
         "id": 1,
         "title": "Challenge 1",
         "description": "Training a GPT to scope and plan design projects 100x faster.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge1-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "Leveraging the power of GPT models to revolutionize the design project planning process. This innovative approach combines artificial intelligence with design thinking to automate and optimize project scoping, resource allocation, and timeline planning. The result is a dramatic reduction in planning time while maintaining high accuracy and comprehensive coverage of project requirements.",
-        "image_large": "https://via.placeholder.com/800x600",
+        "video_url": "https://www.youtube.com/embed/dQw4w9WgXcQ",
         "imageCaption": "Design Brief Output from ChatGPT"
     },
     {
         "id": 2,
         "title": "Challenge 2",
         "description": "Using Gamma to create Pitch Decks in minutes.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge2-thumbnail.jpg", 
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "I sped up the pitching process by feeding the design brief to Gamma and generated a pitch deck. With some re-prompting on individual pages and image generation I was able to develop a solid deck.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "FemHealth Pitch Deck generated with Gamma"
     },
     {
         "id": 3,
         "title": "Challenge 3",
         "description": "Generating 10s-100s of image ideas in seconds with Krea",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge3-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "Taking cues from the design brief I used image generation in Krea to help determine the look and feel for the new design.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "Image ideas generated with Krea"
     },
     {
         "id": 4,
         "title": "Challenge 4",
         "description": "Styling and iterating images to production quality with Krea.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge4-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "To gain style consistency across images, I used styles in Krea's flux model. Then tweaked until I reached the desired results.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "Consistently styled images with Krea"
     },
     {
         "id": 5,
         "title": "Challenge 5",
         "description": "Training new models in Krea to use your own style in Krea.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge5-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "I fed images to Krea to generate a model to create new styles in Krea that anyone can use. The style can be used at <a href=\"https://www.krea.ai/apps/image/flux?style=e69w1mml0&just_unlocked=true\">Krea Flux Style Page</a>",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "Images generated with the trained Krea Model"
     },
     {
         "id": 6,
         "title": "Challenge 6, 7",
         "description": "Going from image to video in minutes with Krea.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge7-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "In Krea I was able to take two images and have Krea generate a video from those images. Then I generated royalty free audio with Suno, and spliced them both together with CapCut. Video available on YouTube",
-        "image_large": "https://via.placeholder.com/800x600",
+        "video_url": "https://www.youtube.com/embed/dQw4w9WgXcQ",
         "imageCaption": "Still image from video generated with Krea"
     },
     {
         "id": 8,
         "title": "Challenge 8",
         "description": "Creating 10s of variants in Figma to ideate quickly.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge8-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "Using Figma AI and plugins I was able to quickly develop multiple variants in images, and taglines.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "Ad Varients generated with Figma"
     },
     {
         "id": 9,
         "title": "Challenge 9",
         "description": "Using Musho to go from prompt to web design in seconds.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge9-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "Using Musho I was able to generate a web design fitting the project design brief and bring that design into figma to stylize more.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "FemHealth design generated with Musho"
     },
     {
         "id": 10,
         "title": "Challenge 10",
         "description": "Using V7 Go and prompt chaining to hone the brand voice",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge10-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "I used V7 Go to analyze live website pages from Womed Health and identify the tone of voice, and potential SEO optimizations to be used in the redesign.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "Screenshot of V7 Go Brand Voice & SEO optimization spreadsheet"
     },
     {
         "id": 11,
         "title": "Challenge 11",
         "description": "Using V7 Go and prompt chaining to superpower my client research.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge11-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "I used V7 Go to save hours on researching potential clients. V7 Go uses a spreadsheet format and allows you to use a new GPT search in each column. This allows for prompt chaining which allows for incredibly powerful search analysis and synthesis.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "Screenshot of V7 Go Client Profile spreadsheet"
     },
     {
         "id": 12,
         "title": "Challenge 12",
         "description": "Getting design feedback with ChatGPT and Claude",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge12-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "Designing in a vacuum is hard, so I received some design feedback by feeding images of my figma designs to ChatGPT and Claude. This allowed me to quickly iterate on my designs.",
-        "image_large": "https://via.placeholder.com/800x600",
+        "video_url": "https://www.loom.com/share/a4b830b309b5446aa79af47b402ec381?sid=e4aedda6-e79f-4f46-baf9-f888fe1a5003",
         "imageCaption": "Website Re-design based on feedback from Claude and ChatGPT"
     },
     {
         "id": 13,
         "title": "Challenge 13",
         "description": "From design to protoype with Figma and Lovable",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge13-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "I fed the design brief to Gamma and generated a pitch deck. With some re-prompting on individual pages and image generation I was able to develop a solid deck.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "Menstrual Cycle tracking app generated with Lovable"
     },
     {
         "id": 14,
         "title": "Challenge 14",
         "description": "Auto answering important emails with Lindy to speed up my administrative workflow.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge14-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "Within Lindy I was able to setup an automation that reads my emails and determines if they meet specific criteria. From there Lindy will auto respond by generating a message from a Knowledgebase of my choosing.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "Email Auto Response from Lindy"
     },
     {
         "id": 15,
         "title": "Challenge 15",
         "description": "A portfolio of challenges generated with Trae AI development assistant.",
-        "image": "https://via.placeholder.com/300x200",
+        "image": "./images/challenge15-thumbnail.jpg",
+        "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "Using prompting in Trae AI combined with my own programming knowledge, I was able to generate this website with HTML, CSS, and JaveScript.",
-        "image_large": "https://via.placeholder.com/800x600",
         "imageCaption": "This website in development"
     }
   ]
