Updated final project images and content
- Updated large images for challenges 12, 13, 15
- Modified challenge 15 thumbnail
- Updated challenge 9 large image
- Refined project descriptions in JSON
- Enhanced CSS styling

--- a/data/projects.json
+++ b/data/projects.json
@@ -117,7 +117,7 @@
         "image": "./images/challenge15-thumbnail.jpg",
         "image_large": "./images/challenge15-large.jpg",
         "detailedDescription": "Using prompting in Trae AI combined with my own programming knowledge, I was able to generate this website with HTML, CSS, and JaveScript.",
-        "imageCaption": "This website in development"
+        "imageCaption": "This website"
     }
   ]
 }
