--- a/data/projects.json
+++ b/data/projects.json
@@ -7,7 +7,8 @@
         "image": "./images/challenge1-thumbnail.jpg",
         "image_large": "./images/challenge1-large.jpg",
         "detailedDescription": "Leveraging the power of GPT models to revolutionize the design project planning process. This innovative approach combines artificial intelligence with design thinking to automate and optimize project scoping, resource allocation, and timeline planning. The result is a dramatic reduction in planning time while maintaining high accuracy and comprehensive coverage of project requirements. <br>Try it out for yourself at <a href=\"https://chatgpt.com/g/g-67a37c522c608191a0c77ae6aa865a9f-design-project-scoping-sage\">Design Project Scoping Sage</a>.",
-        "imageCaption": "Design Brief Output from ChatGPT"
+        "imageCaption": "Design Brief Output from ChatGPT",
+        "learnings":""
     },
     {
         "id": 2,
@@ -16,7 +17,8 @@
         "image": "./images/challenge2-thumbnail.jpg", 
         "image_large": "./images/challenge2-large.jpg",
         "detailedDescription": "I sped up the pitching process by feeding the design brief to Gamma and generated a pitch deck. With some re-prompting on individual pages and image generation I was able to develop a solid deck.",
-        "imageCaption": "FemHealth Pitch Deck generated with Gamma"
+        "imageCaption": "FemHealth Pitch Deck generated with Gamma",
+        "learnings":""
     },
     {
         "id": 3,
@@ -25,7 +27,8 @@
         "image": "./images/challenge3-thumbnail.jpg",
         "image_large": "./images/challenge3-large.jpg",
         "detailedDescription": "Taking cues from the design brief I used image generation in Krea to help determine the look and feel for the new design.",
-        "imageCaption": "Image ideas generated with Krea"
+        "imageCaption": "Image ideas generated with Krea",
+        "learnings":""
     },
     {
         "id": 4,
@@ -34,7 +37,8 @@
         "image": "./images/challenge4-thumbnail.jpg",
         "image_large": "./images/challenge4-large.jpg",
         "detailedDescription": "To gain style consistency across images, I used styles in Krea's flux model. Then tweaked until I reached the desired results.",
-        "imageCaption": "Consistently styled images with Krea"
+        "imageCaption": "Consistently styled images with Krea",
+        "learnings":""
     },
     {
         "id": 5,
@@ -43,7 +47,8 @@
         "image": "./images/challenge5-thumbnail.jpg",
         "image_large": "./images/challenge5-large.jpg",
         "detailedDescription": "I fed images to Krea to generate a model to create new styles in Krea that anyone can use. The style can be used at <a href=\"https://www.krea.ai/apps/image/flux?style=e69w1mml0&just_unlocked=true\">Krea Flux Style Page</a>",
-        "imageCaption": "Images generated with the trained Krea Model"
+        "imageCaption": "Images generated with the trained Krea Model",
+        "learnings":""
     },
     {
         "id": 6,
@@ -53,7 +58,8 @@
         "image_large": "./images/challenge6-large.jpg",
         "detailedDescription": "In Krea I was able to take two images and have Krea generate a video from those images. Then I generated royalty free audio with Suno, and spliced them both together with CapCut. Video available on YouTube",
         "video_url": "https://www.youtube.com/embed/end6PvohNyw?si=hao8ko3ZRowsrGfG",
-        "imageCaption": "Still image from video generated with Krea"
+        "imageCaption": "Still image from video generated with Krea",
+        "learnings":""
     },
     {
         "id": 8,
@@ -62,7 +68,8 @@
         "image": "./images/challenge8-thumbnail.jpg",
         "image_large": "./images/challenge8-large.jpg",
         "detailedDescription": "Using Figma AI and plugins I was able to quickly develop multiple variants in images, and taglines.",
-        "imageCaption": "Ad Varients generated with Figma"
+        "imageCaption": "Ad Varients generated with Figma",
+        "learnings":""
     },
     {
         "id": 9,
@@ -71,7 +78,8 @@
         "image": "./images/challenge9-thumbnail.jpg",
         "image_large": "./images/challenge9-large.jpg",
         "detailedDescription": "Using Musho I was able to generate a web design fitting the project design brief and bring that design into figma to stylize more.",
-        "imageCaption": "FemHealth design generated with Musho"
+        "imageCaption": "FemHealth design generated with Musho",
+        "learnings":""
     },
     {
         "id": 10,
@@ -80,7 +88,8 @@
         "image": "./images/challenge10-thumbnail.jpg",
         "image_large": "./images/challenge10-large.jpg",
         "detailedDescription": "I leveraged V7 Go to dramatically reduce time spent researching potential clients through its innovative spreadsheet format. The platform enables sequential GPT searches across columns, creating powerful prompt chains for deeper analysis. This methodology delivers comprehensive insights and synthesis while maintaining exceptional efficiency throughout the research process.",
-        "imageCaption": "Screenshot of V7 Go Client Profile spreadsheet"
+        "imageCaption": "Screenshot of V7 Go Client Profile spreadsheet",
+        "learnings":""
     },
     {
         "id": 12,
@@ -90,7 +99,8 @@
         "image_large": "./images/challenge12-large.jpg",
         "detailedDescription": "Designing in a vacuum is hard, so I received some design feedback by feeding images of my figma designs to ChatGPT and Claude. This allowed me to quickly iterate on my designs.",
         "video_url": "https://www.loom.com/embed/a4b830b309b5446aa79af47b402ec381?sid=3ca64678-00cd-4de7-9b8d-bc3a83e901ae",
-        "imageCaption": "Website Re-design based on feedback from Claude and ChatGPT"
+        "imageCaption": "Website Re-design based on feedback from Claude and ChatGPT",
+        "learnings":""
     },
     {
         "id": 13,
@@ -99,7 +109,8 @@
         "image": "./images/challenge13-thumbnail.jpg",
         "image_large": "./images/challenge13-large.jpg",
         "detailedDescription": "I created a design prototype in Musho, then prompted claude to write the specifications I would need to give an engineer to develop the site. I then fed those specifications and designs to Lovable to generate this app prototype.",
-        "imageCaption": "Menstrual Cycle tracking app generated with Lovable"
+        "imageCaption": "Menstrual Cycle tracking app generated with Lovable",
+        "learnings":""
     },
     {
         "id": 14,
@@ -108,7 +119,8 @@
         "image": "./images/challenge14-thumbnail.jpg",
         "image_large": "./images/challenge14-large.jpg",
         "detailedDescription": "Within Lindy I was able to setup an automation that reads my emails and determines if they meet specific criteria. From there Lindy will auto respond by generating a message from a Knowledgebase of my choosing.",
-        "imageCaption": "Email Auto Response from Lindy"
+        "imageCaption": "Email Auto Response from Lindy",
+        "learnings":""
     },
     {
         "id": 15,
@@ -117,7 +129,8 @@
         "image": "./images/challenge15-thumbnail.jpg",
         "image_large": "./images/challenge15-large.jpg",
         "detailedDescription": "Using prompting in Trae AI combined with my own programming knowledge, I was able to generate this website with HTML, CSS, and JaveScript.",
-        "imageCaption": "This website"
+        "imageCaption": "This website",
+        "learnings":""
     }
   ]
 }
